feat: adds multi vaults feature